--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -34,6 +34,9 @@
           </div>
         </div>
       </form>
+      <pre id="results">
+        
+      </pre>
     </div>
   </div>
 </section>
