--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -1,4 +1,13 @@
 #results div{
+  height: 100px;
   width: 50px;
   display: inline-block;
+  text-align: center;
 }
+
+/* #results > p{
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  display: inline-block;
+  width: 50px;
+} */
